# thesis

./: CMakeLists.txt  init_make.sh  make.sh  run.sh
cfg/: config.yaml
include/: draw.hpp  field.hpp  goal_post.hpp  line.hpp  logger.hpp  main.hpp  robot.hpp  vec_attr.hpp  vec_repl.hpp
src/: main.cpp
